"Make it better"

--- a/src/main/resources/static/style/styles.css
+++ b/src/main/resources/static/style/styles.css
@@ -111,6 +111,13 @@ label{
     margin-left: 100px;
     margin-top: 10px;
 }
+
+label-check{
+    margin-bottom: 30px;
+    margin-left: 100px;
+    margin-top: 10px;
+}
+
 .file{
     padding-top: 17px;
 }
