--- a/src/main/resources/templates/Admin/AddGroupPage.html
+++ b/src/main/resources/templates/Admin/AddGroupPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Добавить</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/img/military-dep-logo.png}">
 </head>
 <body>
     <div>
