--- a/src/main/resources/templates/AddNotePage.html
+++ b/src/main/resources/templates/AddNotePage.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Заметки Военной Кафедры AITU</title>
         <link rel="stylesheet" th:href="@{/style/styles.css}">
+        <link rel="icon" type="image/x-icon" th:href="@{/img/military-dep-logo.png}">
     </head>
     <body>
         <nav class="navbar">
