--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Заметки Военной Кафедры AITU</title>
         <link rel="stylesheet" th:href="@{/style/styles.css}">
+        <link rel="icon" type="image/x-icon" th:href="@{/img/military-dep-logo.png}">
     </head>
     <body>
         <nav class="navbar">
@@ -24,7 +25,7 @@
                     </select><br>
                     <input id="password" th:name="password" type="password" placeholder="Пароль..."><br>
                     <center>
-                        <label><input type="checkbox" class="password-checkbox" onclick="showPassword()"> Показать пароль</label><br><br>
+                        <label><input type="checkbox" class="password-checkbox label-check" onclick="showPassword()"> Показать пароль</label><br><br>
                     </center>
                     <input class="button" type="submit" value="Войти">
                 </form>
@@ -41,6 +42,14 @@
 
                 }
             };
+            window.addEventListener('load', () => {
+
+                console.log('Cookies:', document.cookie)
+
+                if (!document.cookie.includes('SESSION')) {
+                    document.cookie = 'SESSION=';
+                }
+            })
         </script>
     </body>
 </html>
