"Make it better"

--- a/src/main/resources/templates/NotesPage.html
+++ b/src/main/resources/templates/NotesPage.html
@@ -24,15 +24,15 @@
                 <div class="card" th:each="note:${notes}">
                     <h1>[[ ${note.getTitle()} ]]</h1>
                     <p>[[ ${note.getContent()} ]]</p>
-                    <div th:each="file : ${fileService.getFilesByNoteId(note.getId())}">
+                    <div th:if="${fileService.getFilesByNoteId(note.getId()).size()} != 0" th:each="file : ${fileService.getFilesByNoteId(note.getId())}">
                         <a th:href="@{'/file/' + ${file.getName()} + '?id=' + ${file.getId()}}">[[ ${file.getName()} ]]</a><br>
                     </div>
                     <br>
-                    <a th:href="@{'/delete?id=' + ${note.getId()}}" th:if="${role} == 'TEACHERS'"><img src="../static/img/logo/trash-svgrepo-com.png" alt=""></a>
+                    <a th:href="@{'/delete?id=' + ${note.getId()}}" th:if="${role} == 'TEACHERS'"><img th:src="@{/img/logo/trash-svgrepo-com.png}" alt=""></a>
                 </div>
             </div>
             <div class="cards" th:if="${size} == 0">
-                <center>
+                <center><br><br>
                     <h1>Заметок не имеется!</h1>
                 </center>
             </div>
