"Make it better"

--- a/src/main/resources/templates/Admin/AddAdminPage.html
+++ b/src/main/resources/templates/Admin/AddAdminPage.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Добавить</title>
-    <link rel="icon" type="image/x-icon" th:href="/@{/img/military-dep-logo.png}">
+    <link rel="icon" type="image/x-icon" th:href="@{/img/military-dep-logo.png}">
 </head>
 <body>
     <div>
-        <h1>Добавить админ</h1><br>
-        <form method="post" th:action="@{/admin/manage/admins/add}">
-            <label>Логин: </label>
-            <input type="text" th:name="username"><br><br>
-            <label>Пароль: </label>
-            <input type="password" th:name="password"><br><br>
-            <input type="submit" value="Добавить">
-        </form>
-        <hr>
-        <button>
-            <a th:href="@{/admin/manage/admins}">Назад</a>
-        </button>
+        <center>
+            <h1>Добавить админ</h1><br>
+            <form method="post" th:action="@{/admin/manage/admins/add}">
+                <label>Логин: </label>
+                <input type="text" th:name="username"><br><br>
+                <label>Пароль: </label>
+                <input type="password" th:name="password"><br><br>
+                <p th:text="${message}"></p>
+                <input type="submit" value="Добавить">
+            </form>
+            <hr>
+            <button>
+                <a th:href="@{/admin/manage/admins}">Назад</a>
+            </button>
+        </center>
     </div>
 </body>
 </html>
