--- a/src/main/resources/templates/Admin/LoginAdminPage.html
+++ b/src/main/resources/templates/Admin/LoginAdminPage.html
@@ -14,6 +14,7 @@
                 <input type="text" th:name="username"><br><br>
                 <label>Пароль: </label>
                 <input type="password" th:name="password"><br><br>
+                <p th:text="${message}"></p><br>
                 <input type="submit" value="Войти">
             </form>
         </center>
